Update issue templates

--- a/.github/ISSUE_TEMPLATE/----.md
+++ b/.github/ISSUE_TEMPLATE/----.md
@@ -1,8 +1,8 @@
 ---
 name: 功能請求
-about: Suggest an idea for this project
+about: 為這個專案提出一個想法
 title: 增強
-labels: enhancement
+labels: documentation, enhancement
 assignees: abc52090241
 
 ---
@@ -10,6 +10,8 @@ assignees: abc52090241
 **您的功能請求是否與問題相關？請描述。
 明確而簡潔地描述問題出在哪裡。前。我總是很沮喪，當[。。。]
 
+**描述您希望的解決方案**
+清楚而簡潔地描述你想發生的事情。
 
 **描述您考慮過的替代方案**
 明確而簡潔地描述您考慮過的任何替代解決方案或功能。
